# umbra

./: .gitignore  LICENSE  README.md  collect-schema.json  environment.yml  nisqually.geojson  paradise.geojson  paradise_snotel.geojson  pixi.toml  pyproject.toml  utqiagvik-bbox.geojson  utqiagvik.geojson
download/: README.md
metadata/rainier/: 2024-10-26-18-07-08_UMBRA-05.stac.v2.json  2024-10-27-19-01-03_UMBRA-10.stac.v2.json  2024-10-28-19-13-59_UMBRA-08.stac.v2.json  2024-12-16-18-06-25_UMBRA-05.stac.v2.json  2024-12-26-19-43-15_UMBRA-09.stac.v2.json  2024-12-29-19-28-31_UMBRA-10.stac.v2.json  2025-01-20-19-11-09_UMBRA-08.stac.v2.json  2025-02-08-04-58-50_UMBRA-05.stac.v2.json  2025-03-01-19-13-44_UMBRA-08.stac.v2.json  2025-03-06-18-53-13_UMBRA-08.stac.v2.json  2025-03-09-19-16-09_UMBRA-08.stac.v2.json  2025-03-10-18-53-23_UMBRA-08.stac.v2.json  2025-03-13-06-17-26_UMBRA-08.stac.v2.json
metadata/utqiagvik/: 2025-03-10-21-55-36_UMBRA-08.stac.v2.json  (+1 more)
notebooks/: archive-search.ipynb  basic-task.ipynb  constrained-task.ipynb  feasibilities-paradise-2024-10-18.csv  order_summary.ipynb  public-archive-recent.ipynb  public-archive-search.ipynb  recent_timeseries_conus.geojson  restricted-access.ipynb  restricted_access_areas.geojson  spacetrack.ipynb
scripts/: download_rainier.py  download_umbra.py
stacbrowse/: North America.geojson  create_stac_advanced.ipynb  panama-canal-gec.geojson  readme.md  umbra_panamacanal_imglist.txt  umbra_panamacanal_imglist_rpc.txt
tasks/: paradise_025_1.ipynb  paradise_1_4.ipynb  readme.md  umbra_utils.py
(+449 files in other folders)
